--- a/plugin.xml
+++ b/plugin.xml
@@ -44,6 +44,9 @@
 
         <header-file src="src/ios/CDVOffline.h" />
         <source-file src="src/ios/CDVOffline.m" />
+        <header-file src="src/ios/CDVOfflineProtocol.h" />
+        <source-file src="src/ios/CDVOfflineProtocol.m" />
+        
     </platform>
 
 
